--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "test",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "scripts": {
+    "tsc": "tsc -p app -w",
+    "start": "live-server --open=app/src",
+
+    "watch": "gulp watch"
+  },
   "dependencies": {
     "angular2": "^2.0.0-alpha.44",
     "systemjs": "^0.19.2",
     "live-server": "^0.8.2",
-    "typescript": "^1.6.2"
-  },
-  "devDependencies": {},
-  "scripts": {
-    "tsc": "tsc -p app -w",
-    "start": "live-server --open=app/src"
-  },
-  "author": "",
-  "license": "ISC"
+    "typescript": "^1.6.2",
+
+    "gulp": "^3.8.11",
+    "gulp-tsc": "^0.9.1",
+    "gulp-typescript":"^2.9.2",
+    "gulp-concat": "^2.5.2",
+    "gulp-uglify": "^1.2.0",
+    "gulp-angular-templatecache": "^1.6.0"
+  }
 }
